--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a id="nav-butoon" href="#sobremi" class="nav-link active" aria-current="page">Inico</a></li>
+        <li class="nav-item"><a id="nav-butoon" href="#sobremi" class="nav-link active" aria-current="page">Inicio</a></li>
         <li class="nav-item"><a href="#habilidades" class="nav-link">Habilidades</a></li>
         <li class="nav-item"><a href="#proyectos" class="nav-link">proyectos</a></li>
         <li class="nav-item"><a href="#testimonios" class="nav-link">Testimonios</a></li>
@@ -225,7 +225,9 @@
       </section>
 
       <section id="testimonios " class="mt-5">
-        <h2 class="pb-2 mb-5 border-bottom">Testimonios</h2>
+        <div class="container px-4 py-5">
+          <h2 class="pb-2 border-bottom">Testimonios</h2>
+            </div>
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -285,36 +287,17 @@
       <section id="contacto">
         <div class="container my-5">
           <div class="p-5 text-center bg-body-tertiary rounded-3">
-            <svg
-              class="bi mt-4 mb-3"
-              style="color: var(--bs-indigo)"
-              width="100"
-              height="100"
-            >
-              <use xlink:href="#bootstrap"></use>
-            </svg>
-            <h1 class="text-body-emphasis">Jumbotron with icon</h1>
+            <i class="bi bi-envelope contacto " style=" font-size: 50px; color:rgb(3, 52, 110);"></i>
+            <h1 class="text-body-emphasis">Contactame!</h1>
             <p class="col-lg-8 mx-auto fs-5 text-muted">
-              This is a custom jumbotron featuring an SVG image at the top, some
-              longer text that wraps early thanks to a responsive
-              <code>.col-*</code> class, and a customized call to action.
+              Contactame para iniciar un proyecto de Desarrollo web
             </p>
             <div class="d-inline-flex gap-2 mb-5">
-              <button
-                class="d-inline-flex align-items-center btn btn-primary btn-lg px-4 rounded-pill"
-                type="button"
-              >
-                Call to action
-                <svg class="bi ms-2" width="24" height="24">
-                  <use xlink:href="#arrow-right-short"></use>
-                </svg>
-              </button>
-              <button
-                class="btn btn-outline-secondary btn-lg px-4 rounded-pill"
-                type="button"
-              >
-                Secondary link
-              </button>
+              <a href="mailto:angelasuze.gomez.zavala@gmail.com">
+                <button class="btn btn-outline-secondary btn-lg px-4 rounded-pill" type="button">
+                  Contacto
+                </button>
+              </a>
             </div>
           </div>
         </div>
@@ -322,24 +305,18 @@
     </main>
 
     <footer class="py-3 my-4">
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <ul class="nav justify-content-center pb-3 mb-3">
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-body-secondary">Home</a>
+          <a href="https://github.com/Cellyta" target="_blank" class="nav-link px-2 text-body-secondary icon-footer"><i class="bi bi-github"></i></a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-body-secondary">Features</a>
+          <a href="https://www.linkedin.com/in/asuzettegz/" target="_blank" class="nav-link px-2 text-body-secondary icon-footer"><i class="bi bi-linkedin"></i></a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-body-secondary">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-body-secondary">FAQs</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link px-2 text-body-secondary">About</a>
+          <a href="https://www.instagram.com/suzu_nwn/" target="_blank" class="nav-link px-2 text-body-secondary icon-footer"><i class="bi bi-instagram"></i></a>
         </li>
       </ul>
-      <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+      <p class="text-center">Creado por Suzette en el bootcamp de <a href="https://tecnolochicas.mx/" target="_blank">Tecnolochicas PRO</a></p>
     </footer>
 
     <!-- Script Bootstrap -->
