--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
      <!-- Iconos -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Angela Suzette Gomez Zavala</title>
+    <!-- 
+    scrip 
+    -->
   </head>
 
   <body>
@@ -50,7 +53,8 @@
             width="200"
           />
           <h1 class="display-5 fw-bold text-body-emphasis">Angela Gomez</h1>
-          <h2>Desarrolladora Front-end Jr. | Estudiante </h2>
+          <h2 id="app"></h2>
+          
           <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">
               Soy Angela Suzette Gomez Zavala Estudiante de Ingenieria en
@@ -319,11 +323,16 @@
       <p class="text-center">Creado por Suzette en el bootcamp de <a href="https://tecnolochicas.mx/" target="_blank">Tecnolochicas PRO</a></p>
     </footer>
 
+
+        <!-- Typewriter -->
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <!-- Script Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+        <!-- JS  -->
+    <script src="main.js"></script>
   </body>
 </html>
