--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="px-4 py-5 my-5 text-center">
           <img
             class="d-block mx-auto mb-4"
-            src="assets\yo2.png"
+            src="assets\606a8aa4-6223-4e55-8b19-c71fafc6ae1a.jpg"
             alt="FotoPerfil"
             width="200"
           />
